<resources>
    <string name="app_name">Giaodien</string>
    <string name="action_home">Trang chủ</string>
    <string name="action_lich">Lịch khám</string>
    <string name="action_qr"></string>
    <string name="action_thongbao">Thông báo</string>
    <string name="action_taikhoan">Tài khoản</string>

    <string name="timkiem">Tìm kiếm</string>
    <string name="xin_chao">Xin chào!</string>
    <string name="ten_nguoi_dung">Nguyễn Văn Anh</string>
    <string name="tai_khoan">Tài khoản</string>
    <string name="thong_bao">Thông báo</string>
    <string name="lich_kham">Lịch khám</string>
    <string name="trang_chu">Trang chủ</string>
    <string name="ten">Nguyễn Văn Anh</string>
    <string name="ngsinh">29/10/1999</string>
    <string name="gioitinh">Nam</string>
    <string name="sdt">0949225666</string>
    <string name="diachi">Q1,TP.HCM</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string-array name="trieuChungS">
        <item>Buồn nôn</item>
        <item>Bị đau cơ khi căng người</item>
        <item>Bị choáng khi đứng lên đột ngột</item>
        <item>Đau thắt ngực trái</item>
        <item>Đau vùng thượng vị</item>
        <item>Đau vai</item>
        <item>Đau đầu</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_thong_bao_uong_thuoc">ThongBaoUongThuoc</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hepat">Hepat</string>
    <string name="noi_dung_hepat">Là viết tắt 2 chữ đầu Help Patient. Chính là phương châm hoạt động của ứng dụng, luôn hướng tới tối ưu tiện ích người dùng, đặc biệt là người bệnh.</string>
    <string name="giaiphap">Giải pháp y tế thông minh</string>
    <string name="giaiphap_y1">- Phù hợp với tình hình dịch bệnh hiện nay</string>
    <string name="giaiphap_y2">- Tiết kiệm thời gian</string>
    <string name="giaiphap_y3">- Truy cập dễ dàng</string>
    <string name="giaiphap_y4">- Đơn giản hóa quyền truy cập vào dữ liệu y tế điện tử</string>
    <string name="doituong">Đối tượng sử dụng ứng dụng</string>
    <string name="doituong_y1">Là các bệnh nhân có mong muốn tiết kiệm được tối đa thời gian và chi phí.</string>
    <string name="doituong_y2">Thay vì phải ra trực tiếp bệnh viện để đặt lịch, điền phiếu thông tin thì giờ đây có thể thực hiện online với một chiếc điện thoại.</string>
    <string name="doituong_y3">Đặc biệt, ứng dụng còn lưu trữ được đơn thuốc cũng như hồ sơ bệnh án để theo dõi tình trạng sức khỏe.</string>
    <string name="chuchnang">Các chức năng của ứng dụng Hepat</string>
    <string name="chucnang_y1">- Đặt lịch khám bệnh</string>
    <string name="chucnang_y2">- Tư vấn</string>
    <string name="chucnang_y3">- Bệnh án</string>
    <string name="chucnang_y4">- Diễn đàn</string>
    <string name="chitiet_y1">Cho phép bệnh nhân đặt lịch khám bệnh ở các bệnh viện khắp cả nước theo khung giờ và ngày mà  mong muốn. Bên cạnh đó khi gặp các vấn đề về sức khỏe, bệnh nhân có thể tham khảo thêm thông tin về tình trạng của mình.
</string>
    <string name="chitiet_y3">Ngoài ra, mọi thắc mắc của bệnh nhân luôn được giải đáp ở diễn đàn - nơi mọi người cùng nhau chia sẻ.
</string>
    <string name="chitiet">Chi tiết ứng dụng</string>
    <string name="chitiet_y2">Nhờ vào chức năng bệnh án, sau khi khám bệnh xong bệnh nhân có thể xem lại được các danh mục như: Chẩn đoán của bác sĩ, loại thuốc kê theo toa, bác sĩ thực hiện,…
</string>
    <string name="lido0">☘☘ TẠI SAO NÊN TIÊM VACCINE CÀNG SỚM CÀNG TỐT? ☘☘ </string>
    <string name="lido1">✅ Vắc-xin ngừa COVID 19 có hiệu quả và có thể giúp giảm nguy cơ nhiễm và lây lan vi-rút gây bệnh COVID-19.</string>
    <string name="lido2">✅ Vắc-xin ngừa COVID-19 còn giúp trẻ em và người lớn khỏi bị bệnh nặng ngay cả khi họ bị mắc COVID-19. </string>
    <string name="lido3">✅ Mặc dù COVID-19 ở trẻ em có xu hướng nhẹ hơn so với người lớn, nhưng có thể khiến trẻ bị bệnh nặng, phải nhập viện và một số trẻ thậm chí đã tử vong. Trẻ có các bệnh lý nền có nhiều nguy cơ bị bệnh nặng hơn so với trẻ em không có các bệnh lý nền.</string>
    <string name="lido4">✅ Cho trẻ từ 5 tuổi trở lên đi tiêm chủng có thể giúp bảo vệ trẻ khỏi các biến chứng nghiệm trọng về ngắn và dài hạn. </string>
    <string name="lido5">✅ Việc tiêm chủng cho tất cả mọi người từ 5 tuổi trở lên có thể bảo vệ các gia đình và cộng đồng, bao gồm cả bạn bè và gia đình không đủ điều kiện để tiêm chủng và những người có nhiều nguy cơ mắc bệnh nặng do COVID-19.</string>
    <string name="td5k">☘☘ THÔNG ĐIỆP 5K ☘☘</string>
    <string name="td5k1">☘️ KHẨU TRANG: Đeo khẩu trang vải thường xuyên tại nơi công cộng, nơi tập trung đông người; đeo khẩu trang y tế tại các cơ sở y tế, khu cách ly. </string>
    <string name="td5k2">☘️ KHỬ KHUẨN: Rửa tay thường xuyên bằng xà phòng hoặc dung dịch sát khuẩn tay. Vệ sinh các bề mặt/ vật dụng thường xuyên tiếp xúc (tay nắm cửa, điện thoại, máy tính bảng, mặt bàn, ghế…). Giữ vệ sinh, lau rửa và để nhà cửa thông thoáng. </string>
    <string name="td5k3">☘️ KHOẢNG CÁCH: Giữ khoảng cách khi tiếp xúc với người khác.  </string>
    <string name="td5k4">☘️ KHAI BÁO Y TẾ: thực hiện khai báo y tế trên App NCOVI;\ncài đặt ứng dụng BlueZone tại địa chỉ https://www.bluezone.gov.vn để được cảnh báo nguy cơ lây nhiễm COVID-19.\n Khi có dấu hiệu sốt, ho, khó thở hãy gọi điện cho đường dây nóng của Bộ Y tế 19009095 hoặc đường dây nóng của y tế địa phương để được tư vấn, hỗ trợ, hướng dẫn đi khám bệnh đảm bảo an toàn. </string>
    <string name="td5k5">☘️ KHÔNG TỤ TẬP đông người.</string>
    <string name="errorlichkham">Vui lòng chọn ngày và giờ đặt khám</string>

</resources>