<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
        <ImageButton
            android:id="@+id/imbtnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="25dp"
            android:background="@null"
            android:src="@drawable/ic_baseline_arrow_back_24"
            tools:ignore="RtlHardcoded" />

<TextView
    android:background="#69F4E5"
        android:layout_margin="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
        android:text="@string/td5k"
        android:textColor="@color/black"
        android:gravity="center"
        android:textSize="25sp"/>
        <TextView
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/td5k1"
            android:textColor="@color/black"
            android:gravity="center"
            android:textSize="18sp"/>
        <TextView
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/td5k2"
            android:textColor="@color/black"
            android:gravity="center"
            android:textSize="18sp"/>
        <TextView
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/td5k3"
            android:textColor="@color/black"
            android:gravity="center"
            android:textSize="18sp"/>
        <TextView
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/td5k4"
            android:textColor="@color/black"
            android:gravity="center"
            android:textSize="18sp"/>
        <TextView
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/td5k5"
            android:textColor="@color/black"
            android:gravity="center"
            android:textSize="18sp"/>
</LinearLayout>