<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LichKham">
    <TextView
        android:id="@+id/txtLichKham"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:text="Lịch khám"
        android:background="#37D16D"
        android:textSize="30dp"
        android:gravity="center"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>


    <TabHost
        android:id="@android:id/tabhost"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toBottomOf="@id/txtLichKham"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="100dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:id="@+id/tab_1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    >
                    <include layout="@layout/tab_hien_tai"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab_2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <include layout="@layout/tab_da_hoan_thanh"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab_3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <include layout="@layout/tab_da_huy"/>
                </LinearLayout>

            </FrameLayout>
        </LinearLayout>
    </TabHost>
    <TableLayout
        android:id="@+id/tbMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="-50dp"

        android:shrinkColumns="*"
        android:stretchColumns="*"
        android:background="@color/white">
        <TableRow>

            <ImageButton
                android:id="@+id/imbtnHomePage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/white"

                android:src="@drawable/home"
                tools:ignore="SpeakableTextPresentCheck" />

            <ImageButton
                android:id="@+id/imbtnLichKham"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/white"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:src="@drawable/lichkham_3"
                android:backgroundTint="#B5F4B7"
                tools:ignore="SpeakableTextPresentCheck" />

            <ImageButton
                android:id="@+id/imbtnMaQR"
                android:layout_width="60dp"
                android:layout_height="80dp"
                android:background="#37D16D"
                android:src="@drawable/qrcode_1"
                tools:ignore="SpeakableTextPresentCheck" />

            <ImageButton
                android:id="@+id/imbtnThongBao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/white"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:src="@drawable/thongbao_4"
                tools:ignore="SpeakableTextPresentCheck" />

            <ImageButton
                android:id="@+id/imbtnTaikhoan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/white"
                android:src="@drawable/ic_baseline_perm_identity_24"
                tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trang_chu"
                android:layout_gravity="center"
                android:textSize="13dp"
                android:layout_marginBottom="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lich_kham"
                android:layout_gravity="center"
                android:textSize="13dp"
                android:layout_marginBottom="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thong_bao"
                android:layout_gravity="center"
                android:textSize="13dp"
                android:layout_marginBottom="5dp"
                android:layout_column="3"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tai_khoan"
                android:layout_gravity="center"
                android:textSize="13dp"
                android:layout_marginBottom="5dp"
                />

        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>